k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        nodepool: development
      tolerations:
      - key: nodepool
        operator: Equal
        value: development
      containers:
        - name: api
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 128Mi
