k8s/dev/out.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    secret.reloader.stakater.com/reload: api
  labels:
    app: api
  name: go-api-api
  namespace: go-api-dev
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    secret.reloader.stakater.com/reload: api
  labels:
    app: api
  name: go-api-api
  namespace: go-api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        secret.reloader.stakater.com/reload: api
      labels:
        app: api
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: go-api
        image: go-api-image:v1.0.1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
        name: api
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
      nodeSelector:
        nodepool: development
      restartPolicy: Always
      tolerations:
      - key: nodepool
        operator: Equal
        value: development
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    secret.reloader.stakater.com/reload: api
  labels:
    app: api
  name: go-api-api
  namespace: go-api-dev
spec:
  ingressClassName: traefik
  rules:
  - host: api-dns
    http:
      paths:
      - backend:
          service:
            name: go-api-api
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api-dns
    secretName: api-ssl
